--- a/gui/guiFrameCfg/guiFrameCfgSynEdit.lfm
+++ b/gui/guiFrameCfg/guiFrameCfgSynEdit.lfm
@@ -168,7 +168,7 @@ object fraCfgSynEdit: TfraCfgSynEdit
       Height = 19
       Top = 8
       Width = 111
-      Caption = 'Ver Núm.de línea'
+      Caption = 'Show Núm.de línea'
       TabOrder = 1
     end
     object chkVerMarPle: TCheckBox
@@ -176,7 +176,7 @@ object fraCfgSynEdit: TfraCfgSynEdit
       Height = 19
       Top = 32
       Width = 129
-      Caption = 'Ver Marc.de plegado'
+      Caption = 'Show Marc.de plegado'
       TabOrder = 2
     end
   end
