--- a/gui/guiFormViewProp.lfm
+++ b/gui/guiFormViewProp.lfm
@@ -39,7 +39,7 @@ object FormPropView: TFormPropView
       ModalResult = 2
       TabOrder = 1
     end
-    object btnAplicar: TBitBtn
+    object btnApply: TBitBtn
       Left = 120
       Height = 30
       Top = 8
