--- a/src/forms/uFormForm1.lfm
+++ b/src/forms/uFormForm1.lfm
@@ -1,11 +1,11 @@
 object Form1: TForm1
-  Left = 395
-  Height = 575
-  Top = 35
-  Width = 841
+  Left = 328
+  Height = 541
+  Top = 71
+  Width = 855
   Caption = 'GTCad'
-  ClientHeight = 546
-  ClientWidth = 841
+  ClientHeight = 512
+  ClientWidth = 855
   KeyPreview = True
   Menu = MainMenu1
   OnClose = FormClose
@@ -15,37 +15,19 @@ object Form1: TForm1
   OnShow = FormShow
   Position = poDesktopCenter
   LCLVersion = '2.0.6.0'
-  object StatusBar1: TStatusBar
-    Left = 0
-    Height = 23
-    Top = 523
-    Width = 841
-    Panels = <    
-      item
-        Width = 100
-      end    
-      item
-        Width = 120
-      end    
-      item
-        Width = 80
-      end    
-      item
-        Width = 150
-      end    
-      item
-        Width = 50
-      end>
-    SimplePanel = False
-  end
   object ToolBar1: TToolBar
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = Owner
+    AnchorSideRight.Control = Owner
     Left = 0
     Height = 26
     Top = 0
-    Width = 841
+    Width = 855
     Caption = 'ToolBar1'
+    Color = clMenuBar
     Images = ImgActions16
-    TabOrder = 1
+    ParentColor = False
+    TabOrder = 0
     object ToolButton1: TToolButton
       Left = 78
       Top = 2
@@ -118,87 +100,208 @@ object Form1: TForm1
       Action = acPageAddLine
     end
   end
-  object PageControl1: TPageControl
-    Left = 184
-    Height = 468
-    Top = 32
-    Width = 633
-    ActivePage = TabSheet1
-    TabIndex = 0
-    TabOrder = 2
-    object TabSheet1: TTabSheet
-      Caption = 'editor'
-    end
-    object TabSheet2: TTabSheet
-      Caption = 'tabSheet2'
-    end
-  end
-  object Splitter2: TSplitter
-    Left = 148
-    Height = 506
-    Top = 64
-    Width = 5
-    Align = alNone
-    ResizeAnchor = akRight
-  end
-  object panCommand: TPanel
-    Left = 152
-    Height = 68
-    Top = 366
-    Width = 608
-    Anchors = []
-    Caption = 'cmdPanel'
-    ClientHeight = 68
-    ClientWidth = 608
-    TabOrder = 4
-    object Memo1: TMemo
+  object WrapperMiddle: TPanel
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = ToolBar1
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Control = WrapperBottom
+    Left = 0
+    Height = 389
+    Top = 26
+    Width = 855
+    Anchors = [akTop, akLeft, akRight, akBottom]
+    Caption = 'WrapperMiddle'
+    ClientHeight = 389
+    ClientWidth = 855
+    Color = clMenuBar
+    ParentColor = False
+    TabOrder = 1
+    inline frameProjectExplorer1: TframeProjectExplorer
+      AnchorSideLeft.Control = WrapperMiddle
+      AnchorSideTop.Control = WrapperMiddle
+      AnchorSideRight.Control = splitterVert1
+      AnchorSideBottom.Control = WrapperMiddle
+      AnchorSideBottom.Side = asrBottom
       Left = 1
-      Height = 42
+      Height = 377
       Top = 1
-      Width = 606
-      Align = alClient
+      Width = 150
+      Anchors = [akTop, akLeft, akRight, akBottom]
+      BorderSpacing.Bottom = 10
+      ClientHeight = 377
+      ClientWidth = 150
+      Color = clMenuBar
+      ParentColor = False
+      inherited treeNav: TTreeView
+        Height = 353
+        Width = 150
+        BackgroundColor = clWhite
+        Color = clWhite
+        ExpandSignType = tvestPlusMinus
+      end
+      inherited Label2: TLabel
+        Width = 150
+        ParentColor = True
+      end
+    end
+    object splitterVert1: TSplitter
+      AnchorSideLeft.Control = frameProjectExplorer1
+      AnchorSideLeft.Side = asrBottom
+      AnchorSideTop.Control = WrapperMiddle
+      AnchorSideBottom.Control = WrapperMiddle
+      AnchorSideBottom.Side = asrBottom
+      Left = 151
+      Height = 387
+      Top = 1
+      Width = 5
+      Align = alNone
+      Anchors = [akTop, akBottom]
+      AutoSnap = False
+      MinSize = 15
+    end
+    object PageControl1: TPageControl
+      AnchorSideLeft.Control = splitterVert1
+      AnchorSideLeft.Side = asrBottom
+      AnchorSideTop.Control = WrapperMiddle
+      AnchorSideRight.Control = WrapperMiddle
+      AnchorSideRight.Side = asrBottom
+      AnchorSideBottom.Control = WrapperMiddle
+      AnchorSideBottom.Side = asrBottom
+      Left = 156
+      Height = 377
+      Top = 1
+      Width = 698
+      ActivePage = TabSheet1
+      Anchors = [akTop, akLeft, akRight, akBottom]
+      BorderSpacing.Bottom = 10
+      TabIndex = 0
+      TabOrder = 2
+      OnChange = PageControl1Change
+      object TabSheet1: TTabSheet
+        Caption = 'editor'
+      end
+      object TabSheet2: TTabSheet
+        Caption = 'tabSheet2'
+      end
+    end
+  end
+  object WrapperBottom: TPanel
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = WrapperMiddle
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 0
+    Height = 97
+    Top = 415
+    Width = 855
+    Alignment = taLeftJustify
+    Anchors = [akLeft, akRight, akBottom]
+    ClientHeight = 97
+    ClientWidth = 855
+    Color = clMenuBar
+    Constraints.MaxHeight = 155
+    ParentColor = False
+    TabOrder = 2
+    OnClick = WrapperBottomClick
+    object cmdMessages: TMemo
+      AnchorSideLeft.Control = WrapperBottom
+      AnchorSideTop.Control = WrapperBottom
+      AnchorSideRight.Control = WrapperBottom
+      AnchorSideRight.Side = asrBottom
+      AnchorSideBottom.Control = cmdInputWrapper
+      Left = 1
+      Height = 36
+      Top = 10
+      Width = 853
+      Anchors = [akLeft, akRight, akBottom]
+      BorderSpacing.Top = 5
+      Color = clWhite
+      Constraints.MinHeight = 36
       Lines.Strings = (
         ''
       )
+      OnChange = cmdMessagesChange
       TabOrder = 0
     end
-    object Panel1: TPanel
+    object cmdInputWrapper: TPanel
+      AnchorSideLeft.Control = WrapperBottom
+      AnchorSideTop.Control = cmdMessages
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Control = WrapperBottom
+      AnchorSideRight.Side = asrBottom
+      AnchorSideBottom.Control = StatusBar
       Left = 1
-      Height = 24
-      Top = 43
-      Width = 606
-      Align = alBottom
-      Caption = 'Panel1'
-      ClientHeight = 24
-      ClientWidth = 606
+      Height = 31
+      Top = 46
+      Width = 853
+      Alignment = taLeftJustify
+      Anchors = [akLeft, akRight, akBottom]
+      ClientHeight = 31
+      ClientWidth = 853
+      Color = clMenuBar
+      ParentColor = False
       TabOrder = 1
-      object Edit1: TEdit
-        Left = 86
-        Height = 22
+      object cmdInput: TEdit
+        AnchorSideLeft.Control = cmdInputLabel
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = cmdInputWrapper
+        AnchorSideBottom.Control = cmdInputWrapper
+        AnchorSideBottom.Side = asrBottom
+        Left = 91
+        Height = 29
         Top = 1
-        Width = 493
-        Align = alClient
-        OnKeyDown = Edit1KeyDown
+        Width = 692
+        Anchors = [akTop, akLeft, akRight, akBottom]
+        Color = 7171437
+        Font.Color = 5166924
+        Font.Style = [fsBold]
+        OnKeyDown = cmdInputKeyDown
+        ParentFont = False
         TabOrder = 0
+        Text = 'cmdInput'
       end
-      object Label1: TLabel
-        Left = 1
-        Height = 22
-        Top = 1
-        Width = 85
-        Align = alLeft
-        Caption = '>> Comando: '
+      object cmdInputLabel: TLabel
+        AnchorSideTop.Control = cmdInputWrapper
+        AnchorSideBottom.Control = cmdInputWrapper
+        AnchorSideBottom.Side = asrBottom
+        Left = 8
+        Height = 19
+        Top = 6
+        Width = 73
+        Anchors = [akTop, akLeft, akBottom]
+        BorderSpacing.Top = 5
+        BorderSpacing.Right = 10
+        BorderSpacing.Bottom = 5
+        Caption = 'cmdPrompt'
+        Color = clMenuBar
         Layout = tlCenter
         ParentColor = False
+        Transparent = False
       end
-      object BitBtn1: TBitBtn
-        Left = 579
-        Height = 22
+      object cmdRunBtn: TSpeedButton
+        AnchorSideLeft.Control = cmdInput
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = cmdInputWrapper
+        AnchorSideRight.Control = cmdInputWrapper
+        AnchorSideRight.Side = asrBottom
+        AnchorSideBottom.Control = cmdInputWrapper
+        AnchorSideBottom.Side = asrBottom
+        Left = 788
+        Height = 29
         Top = 1
-        Width = 26
-        Align = alRight
+        Width = 59
+        Anchors = [akTop, akLeft, akRight, akBottom]
+        AutoSize = True
+        BorderSpacing.Left = 5
+        BorderSpacing.Right = 5
         BorderSpacing.CellAlignHorizontal = ccaCenter
         BorderSpacing.CellAlignVertical = ccaCenter
+        Flat = True
         Glyph.Data = {
           36040000424D3604000000000000360000002800000010000000100000000100
           2000000000000004000064000000640000000000000000000000000000000000
@@ -235,10 +338,43 @@ object Form1: TForm1
           00000000000000000000D1B27532D3B17598D4B277D9D3B276F9D2B376F9D4B2
           77D9D4B37797D4B4743000000000000000000000000000000000
         }
-        GlyphShowMode = gsmAlways
         Spacing = 0
-        TabOrder = 1
+        OnClick = cmdRunBtnClick
       end
+    end
+    object StatusBar: TStatusBar
+      AnchorSideLeft.Control = WrapperBottom
+      AnchorSideTop.Control = cmdInputWrapper
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Control = WrapperBottom
+      AnchorSideRight.Side = asrBottom
+      AnchorSideBottom.Control = WrapperBottom
+      AnchorSideBottom.Side = asrBottom
+      Left = 1
+      Height = 19
+      Top = 77
+      Width = 853
+      Align = alNone
+      Anchors = [akLeft, akRight, akBottom]
+      Constraints.MaxHeight = 19
+      Constraints.MinHeight = 19
+      Panels = <      
+        item
+          Width = 100
+        end      
+        item
+          Width = 120
+        end      
+        item
+          Width = 80
+        end      
+        item
+          Width = 200
+        end      
+        item
+          Width = 50
+        end>
+      SimplePanel = False
     end
   end
   object ActionList1: TActionList
@@ -261,7 +397,7 @@ object Form1: TForm1
       ImageIndex = 15
     end
     object acToolbarConfig: TAction
-      Category = 'TollBox'
+      Category = 'Toolbar'
       Caption = 'Confi&guración'
       ImageIndex = 22
       OnExecute = acToolbarConfigExecute
@@ -450,8 +586,8 @@ object Form1: TForm1
   object ImgActions32: TImageList
     Height = 32
     Width = 32
-    left = 296
-    top = 112
+    left = 704
+    top = 96
     Bitmap = {
       4C69240000002000000020000000000000000000000000000000000000000000
       0000000000000000000000000000000000000000000000000000000000000000
@@ -5065,8 +5201,8 @@ object Form1: TForm1
     }
   end
   object ImgActions16: TImageList
-    left = 216
-    top = 112
+    left = 624
+    top = 120
     Bitmap = {
       4C69240000001000000010000000000000000000000000000000000000000000
       0000000000000000000000000000000000000000000000000000000000000000
