--- a/src/frames/uFramePaintBox.lfm
+++ b/src/frames/uFramePaintBox.lfm
@@ -1,4 +1,4 @@
-object fraEditor: TfraEditor
+object framePaintBox: TFramePaintBox
   Left = 0
   Height = 298
   Top = 0
@@ -6,8 +6,8 @@ object fraEditor: TfraEditor
   ClientHeight = 298
   ClientWidth = 368
   TabOrder = 0
-  DesignLeft = 253
-  DesignTop = 260
+  DesignLeft = 388
+  DesignTop = 331
   object PaintBox1: TPaintBox
     Left = 0
     Height = 298
